cmake_minimum_required(VERSION 3.23)
project(code C)

set(CMAKE_C_STANDARD 99)

add_executable(code main.c)

add_executable(1week01 1week01.c)
add_executable(1week02 1week02.c)
add_executable(1week_hw_01 1week_hw_01.c)
add_executable(2w3-3 2w3-3.c)
add_executable(2w3-4 2w3-4.c)
add_executable(2w3-5 2w3-5.c)
add_executable(2w4-1 2w4-1.c)
add_executable(2w4-2 2w4-2.c)
add_executable(hw1 hw1.c)