cmake_minimum_required(VERSION 3.23)
project(code C)

set(CMAKE_C_STANDARD 99)

add_executable(code main.c)

add_executable(1week01 01w02-01.c)
add_executable(1week02 01w02-02.c)
add_executable(1week_hw_01 hw0.c)
add_executable(2w3-3 02w03-03.c)
add_executable(2w3-4 02w03-04.c)
add_executable(2w3-5 02w03-05.c)
add_executable(2w4-1 02w04-01.c)
add_executable(2w4-2 02w04-02.c)
add_executable(hw1 hw1.c)